fix text overlap issue for storefront

--- a/assets/css/frontend.scss
+++ b/assets/css/frontend.scss
@@ -8,9 +8,10 @@
 			position: absolute;
 			background: #fff;
 			margin: 10px 20px;
-			font-size: 12px;
+			font-size: 13px;
 			left: 0;
 			right: 0;
+			top: 0;
 			text-align: center;
 			text-transform: uppercase;
 			height: 35px;
